# ais-backend

./: .travis.yml  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
ais_content/: admin.py  apps.py  choices.py  models.py  serializers.py  urls.py
ais_content/migrations/: 0001_create_find_model.py  0002_create_formal_aspect_model.py  0003_create_ware_model.py  0004_add_find_tree_node.py  0005_tree_node_data_migration.py  0006_remove_systematics.py  0007_auto_20210421_1325.py  0008_auto_20210421_1342.py  0009_auto_20210421_1406.py  0010_auto_20210421_1646.py  0011_auto_20210422_1428.py  0012_auto_20210604_1959.py  0013_auto_20210920_1737.py  0014_auto_20220128_1700.py  0015_auto_20230707_1548.py
config/: urls.py
config/settings/: common.py
docker/local/: Dockerfile.web
